--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!-- 
-    #RumoAoPróximoNível   
-    #Protagonistas
-    #ImaginarConstruirTransformar
-    #SemLimites
-    #BuildTheFuture
--->
-
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
+    <meta charset="UTF=8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      
     <title>Matheus Manholer - Dowhile 2021</title>
 
     <link rel="stylesheet" href="style.css" />
